--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@
 .box-phonebook {
   display: flex;
   align-items: center;
+  margin-top: 10px;
   padding: 20px;
   border: 1px solid #eeeeee;
 }
